--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       width: 240px;
       height: 150px;
       /* ボタンの文字サイズ */
-      font-size: x-large;
+      font-size: xx-large;
       /* 数字部分の背景色 */
       background-color: #dcdcdca4;
       /* ボタンの詳細設定 */
