--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
       text-align: center; /* 文字を右詰めに */
       /* 見た目の詳細設定 */
       background: #747373b9;
+      color: #000000;
       border-top: solid #dcdcdca4 5px;
       border-bottom: solid #dcdcdca4 5px;
       border-right: solid #b6b6b6 6px;
@@ -164,6 +165,7 @@
       text-align: center; /* 文字を右詰めに */
       /* 見た目の詳細設定 */
       background: #339cdd;
+      color: #000000;
       border-top: solid #dcdcdca4 5px;
       border-bottom: solid #dcdcdca4 5px;
       border-right: solid #b6b6b6 6px;
@@ -175,6 +177,7 @@
       text-align: center; /* 文字を右詰めに */
       /* 見た目の詳細設定 */
       background: #339cdd;
+      color: #000000;
       border-top: solid #dcdcdca4 5px;
       border-bottom: solid #dcdcdca4 5px;
       border-right: solid #b6b6b6 6px;
